WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256517
REGRESSION(
263118@main
): [GTK] ASSERTION FAILED: !m_isPaintingSuspended
https://bugs.webkit.org/show_bug.cgi?id=256517
Summary
REGRESSION(263118@main): [GTK] ASSERTION FAILED: !m_isPaintingSuspended
Carlos Garcia Campos
Reported
2023-05-09 01:58:57 PDT
#0 WTFCrash () at /app/webkit/Source/WTF/wtf/Assertions.cpp:327 327 *(int *)(uintptr_t)0xbbadbeef = 0; [Current thread is 1 (Thread 0x7fcf53917540 (LWP 33))] (gdb) back #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:327 #1 0x00007fcf689f0fe7 in WTFCrashWithInfo(int, char const*, char const*, int) () at /app/webkit/WebKitBuild/Debug/WTF/Headers/wtf/Assertions.h:758 #2 0x00007fcf6a3f6d73 in WebKit::DrawingAreaCoordinatedGraphics::display(WebKit::UpdateInfo&) (this=0x7fcf4a0b4640, updateInfo=...) at /app/webkit/Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp:748 #3 0x00007fcf6a3f5924 in WebKit::DrawingAreaCoordinatedGraphics::updateGeometry(WebCore::IntSize const&, WTF::CompletionHandler<void ()>&&) (this=0x7fcf4a0b4640, size=..., completionHandler=...) at /app/webkit/Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp:428 #4 0x00007fcf68f39fc4 in _ZZN3IPC18callMemberFunctionIN6WebKit11DrawingAreaES2_FvRKN7WebCore7IntSizeEON3WTF17CompletionHandlerIFvvEEEESt5tupleIJS4_EES9_EEvPT_MT0_T1_OT2_ONS8_IT3_EEENKUlDpOT_E_clIJS4_EEEDaSR_ (__closure=0x7ffd1ddd02a0) at /app/webkit/Source/WebKit/Platform/IPC/HandleMessage.h:147 #5 0x00007fcf68f3b3d7 in _ZSt13__invoke_implIvZN3IPC18callMemberFunctionIN6WebKit11DrawingAreaES3_FvRKN7WebCore7IntSizeEON3WTF17CompletionHandlerIFvvEEEESt5tupleIJS5_EESA_EEvPT_MT0_T1_OT2_ONS9_IT3_EEEUlDpOT_E_JS5_EESG_St14__invoke_otherOSI_DpOT1_ (__f=...) at /usr/include/c++/12.2.0/bits/invoke.h:61 #6 0x00007fcf68f3aa97 in _ZSt8__invokeIZN3IPC18callMemberFunctionIN6WebKit11DrawingAreaES3_FvRKN7WebCore7IntSizeEON3WTF17CompletionHandlerIFvvEEEESt5tupleIJS5_EESA_EEvPT_MT0_T1_OT2_ONS9_IT3_EEEUlDpOT_E_JS5_EENSt15__invoke_resultISG_JDpT0_EE4typeEOSG_DpOSV_ (__fn=...) at /usr/include/c++/12.2.0/bits/invoke.h:96 #7 0x00007fcf68f3a00f in _ZSt12__apply_implIZN3IPC18callMemberFunctionIN6WebKit11DrawingAreaES3_FvRKN7WebCore7IntSizeEON3WTF17CompletionHandlerIFvvEEEESt5tupleIJS5_EESA_EEvPT_MT0_T1_OT2_ONS9_IT3_EEEUlDpOT_E_SF_JLm0EEEDcOSG_OSI_St16integer_sequenceImJXspT1_EEE (__f=..., __t=...) at /usr/include/c++/12.2.0/tuple:1852 #8 0x00007fcf68f3a04d in _ZSt5applyIZN3IPC18callMemberFunctionIN6WebKit11DrawingAreaES3_FvRKN7WebCore7IntSizeEON3WTF17CompletionHandlerIFvvEEEESt5tupleIJS5_EESA_EEvPT_MT0_T1_OT2_ONS9_IT3_EEEUlDpOT_E_SF_EDcOSG_OSI_ (__f=..., __t=...) at /usr/include/c++/12.2.0/tuple:1863 #9 0x00007fcf68f3a0be in IPC::callMemberFunction<WebKit::DrawingArea, WebKit::DrawingArea, void (WebCore::IntSize const&, WTF::CompletionHandler<void ()>&&), std::tuple<WebCore::IntSize>, void ()>(WebKit::DrawingArea*, void (WebKit::DrawingArea::*)(WebCore::IntSize const&, WTF::CompletionHandler<void ()>&&), std::tuple<WebCore::IntSize>&&, WTF::CompletionHandler<void ()>&&) (object=0x7fcf4a0b4640, function=&virtual table offset 288, tuple=..., completionHandler=...) at /app/webkit/Source/WebKit/Platform/IPC/HandleMessage.h:145 #10 0x00007fcf68f39a19 in IPC::handleMessageAsync<Messages::DrawingArea::UpdateGeometry, WebKit::DrawingArea, WebKit::DrawingArea, void (WebCore::IntSize const&, WTF::CompletionHandler<void ()>&&)>(IPC::Connection&, IPC::Decoder&, WebKit::DrawingArea*, void (WebKit::DrawingArea::*)(WebCore::IntSize const&, WTF::CompletionHandler<void ()>&&)) (connection=..., decoder=..., object=0x7fcf4a0b4640, function=&virtual table offset 288) at /app/webkit/Source/WebKit/Platform/IPC/HandleMessage.h:320 #11 0x00007fcf68f39608 in WebKit::DrawingArea::didReceiveMessage(IPC::Connection&, IPC::Decoder&) (this=0x7fcf4a0b4640, connection=..., decoder=...) at /app/webkit/WebKitBuild/Debug/DerivedSources/WebKit/DrawingAreaMessageReceiver.cpp:78 #12 0x00007fcf697ead90 in IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) (this=0x7fcf4a030188, connection=..., decoder=...) at /app/webkit/Source/WebKit/Platform/IPC/MessageReceiverMap.cpp:129 #13 0x00007fcf69fa0f85 in WebKit::WebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) (this=0x7fcf4a030150, connection=..., decoder=...) at /app/webkit/Source/WebKit/WebProcess/WebProcess.cpp:927 #14 0x00007fcf697bfe37 in IPC::Connection::dispatchMessage(IPC::Decoder&) (this=0x7fcf4a05c1e0, decoder=...) at /app/webkit/Source/WebKit/Platform/IPC/Connection.cpp:1222 #15 0x00007fcf697c0082 in IPC::Connection::dispatchMessage(std::unique_ptr<IPC::Decoder, std::default_delete<IPC::Decoder> >) (this=0x7fcf4a05c1e0, message=std::unique_ptr<IPC::Decoder> = {...}) at /app/webkit/Source/WebKit/Platform/IPC/Connection.cpp:1270 #16 0x00007fcf697c0440 in IPC::Connection::dispatchOneIncomingMessage() (this=0x7fcf4a05c1e0) at /app/webkit/Source/WebKit/Platform/IPC/Connection.cpp:1335 #17 0x00007fcf697bfa7a in operator()() const (__closure=0x7fcf4a060118) at /app/webkit/Source/WebKit/Platform/IPC/Connection.cpp:1184 #18 0x00007fcf697c7016 in WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::unique_ptr<IPC::Decoder>)::<lambda()>, void>::call(void) (this=0x7fcf4a060110) at /app/webkit/WebKitBuild/Debug/WTF/Headers/wtf/Function.h:53 #19 0x00007fcf5d492ea1 in WTF::Function<void ()>::operator()() const (this=0x7ffd1ddd06b0) at /app/webkit/WebKitBuild/Debug/WTF/Headers/wtf/Function.h:82 #20 0x00007fcf5eacaa7f in WTF::RunLoop::performWork() (this=0x7fcf4a0140c0) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:147 #21 0x00007fcf5eb7f6ee in operator()(gpointer) const (__closure=0x0, userData=0x7fcf4a0140c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:80 #22 0x00007fcf5eb7f712 in _FUN(gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:82 #23 0x00007fcf5eb7f681 in operator()(GSource*, GSourceFunc, gpointer) const (__closure=0x0, source=0x56133bcc8b50, callback=0x7fcf5eb7f6f5 <_FUN(gpointer)>, userData=0x7fcf4a0140c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:53 #24 0x00007fcf5eb7f6cf in _FUN(GSource*, GSourceFunc, gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:56 #25 0x00007fcf57f20c37 in g_main_dispatch (context=0x56133bbade30) at ../glib/gmain.c:3419 #26 g_main_context_dispatch (context=0x56133bbade30) at ../glib/gmain.c:4137 #27 0x00007fcf57f77028 in g_main_context_iterate.constprop.0 (context=0x56133bbade30, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4213 #28 0x00007fcf57f202af in g_main_loop_run (loop=0x56133bcf3c70) at ../glib/gmain.c:4413 #29 0x00007fcf5eb7fd3a in WTF::RunLoop::run() () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:108
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2023-05-09 02:04:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13634
EWS
Comment 2
2023-05-11 06:24:57 PDT
Committed
263960@main
(e8fdb508b8d7): <
https://commits.webkit.org/263960@main
> Reviewed commits have been landed. Closing PR #13634 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug