REGRESSION(263118@main): [GTK] ASSERTION FAILED: !m_isPaintingSuspended https://bugs.webkit.org/show_bug.cgi?id=256517

Reviewed by Michael Catanzaro.

Before 263118@main we temporarily enabled painting to force an update
when resizing the page. Now we still force the repaint, but without
changing the m_isPaintingSuspended, which causes the assertion failure
in display().

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp:
(WebKit::DrawingAreaCoordinatedGraphics::display): Update the assert to
allow painting being suspended when called from updateGeometry().

Canonical link: https://commits.webkit.org/263960@main